test_cases/pass/p12.lxr
SCRIPT AREA
START SCRIPT
DECLARE BOOL done
done="FALSE"
REPEAT WHEN (done)
START REPEAT
    PRINT: "once"
    done="TRUE"
END REPEAT
END SCRIPT
