test_cases/fail/f16.lxr
SCRIPT AREA
START SCRIPT
DECLARE BOOL b
b="TRUE"
REPEAT (b)
START REPEAT
    b="FALSE"
END REPEAT
END SCRIPT
